fix(testing): Event Test
fixed event test